<resources>
    <string name="app_name">SwuBab</string>
    <string name="menu_today_swubab">오늘의 슈밥</string>
    <string name="menu_week_swubab">이번주 슈밥</string>
    <string name="menu_mypage">마이페이지</string>

    <string name="today_swubab_base_title">오늘의</string>
    <string name="today_swubab_breakfast_title">아침 밥상은?</string>
    <string name="today_swubab_launch_title">점심 밥상은?</string>
    <string name="today_swubab_dinner_title">저녁 밥상은?</string>

    <string name="today_swubab_until">시작까지</string>

    <string name="today_swubab_breakfast_time">아침시간 : 7:30~9:00</string>
    <string name="today_swubab_launch_time">점심시간 : 11:30 ~13:30</string>
    <string name="today_swubab_dinner_time">저녁시간 : 17:10 ~18:30</string>

    <string name="today_swubab_breakfast_tab_title">조식</string>
    <string name="today_swubab_launch_tab_title">중식</string>
    <string name="today_swubab_dinner_tab_title">석식</string>

    <string name="today_swubab_launch_conner_korea">한식코너</string>
    <string name="today_swubab_launch_conner_first">일품코너</string>
    <string name="today_swubab_launch_conner_snack">스낵코너</string>
    <string name="today_swubab_launch_conner_staff">교직원</string>

    <string name="my_swubab_logo">마이페이지 로고</string>
    <string name="my_swubab_version_logo">버전 확인 로고</string>
    <string name="my_swubab_version">버전 정보</string>
    <string name="my_swubab_version_check">최신 버전을 사용하고 있는 중입니다</string>
    <string name="my_swubab_version_info">버전 정보 1.0.0</string>
    <string name="my_swubab_version_now">현재 버전 1.0.0</string>
    <string name="my_swubab_terms">이용약관</string>

    <string name="tv_calender_weekly_mon">월</string>
    <string name="tv_calender_weekly_tue">화</string>
    <string name="tv_calender_weekly_wed">수</string>
    <string name="tv_calender_weekly_thu">목</string>
    <string name="tv_calender_weekly_fri">금</string>
    <string name="tv_week_swubab_title_1">이번주</string>
    <string name="tv_week_swubab_title_2">슈니의 밥상 🍽</string>
    <string name="tv_week_morning_label">🌞 아침식사</string>
    <string name="tv_week_morning_time">7:30~9:00</string>
    <string name="tv_week_lunch_label">🍚 점심식사</string>
    <string name="tv_week_luch_time">11:00~13:30</string>
    <string name="tv_week_dinner_label">🌙 저녁식사</string>
    <string name="tv_week_dinner_time">17:10~18:30</string>
    <string name="tv_week_report">메뉴 정보가 잘못되었나요?</string>
    <string name="tv_test_dummy_data">\n\n\n\n</string>
    <string name="tv_week_swubab_lunch_corner_korea">한식코너</string>
    <string name="tv_week_swubab_lunch_corner_japanese">일품코너</string>
    <string name="tv_week_swubab_lunch_corner_snack">스낵코너</string>
    <string name="tv_week_swubab_lunch_corner_staff">교직원</string>
    <string name="text_week_swubab_today">오늘</string>
    <string name="tv_my_page_personal_information">개인정보 처리방침</string>
</resources>