<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="24dp">

        <RadioGroup
            android:id="@+id/rg_today_swubab_conner"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rb_today_swubab_conner_korea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/today_swubab_btn_conner"
                android:button="@null"
                android:checked="true"
                android:text="@string/today_swubab_launch_conner_korea"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Swubab.Medium"
                android:textColor="@drawable/today_swubab_text_conner"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/rb_today_swubab_conner_first"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/today_swubab_btn_conner"
                android:button="@null"
                android:text="@string/today_swubab_launch_conner_first"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Swubab.Medium"
                android:textColor="@drawable/today_swubab_text_conner"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/rb_today_swubab_conner_snack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/today_swubab_btn_conner"
                android:button="@null"
                android:text="@string/today_swubab_launch_conner_snack"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Swubab.Medium"
                android:textColor="@drawable/today_swubab_text_conner"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/rb_today_swubab_conner_staff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/today_swubab_btn_conner"
                android:button="@null"
                android:text="@string/today_swubab_launch_conner_staff"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Swubab.Medium"
                android:textColor="@drawable/today_swubab_text_conner"
                android:textSize="13sp" />
        </RadioGroup>


        <TextView
            android:id="@+id/tv_today_swubab_launch_content"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginTop="27dp"
            android:background="@drawable/today_swubab_white_rectangle"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Swubab.Regular"
            android:textColor="@color/swubab_black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_today_swubab_conner"
            tools:text="햄김치볶음밥\n고로케케찹" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>