<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/abl_swubab_my_appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Toolbar"
            app:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_swubab_my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary">

                <ImageView
                    android:id="@+id/iv_swubab_my_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/my_swubab_logo"
                    android:src="@drawable/my_logo" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:id="@+id/tv_swubab_my_version"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:paddingStart="24dp"
            android:text="@string/my_swubab_version"
            android:textAppearance="@style/TextAppearance.Swubab.Regular"
            android:textSize="16sp"
            android:textColor="@color/swubab_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/abl_swubab_my_appbarlayout" />


        <ImageView
            android:id="@+id/iv_swubab_my_version_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_my_next"
            app:layout_constraintTop_toTopOf="@id/tv_swubab_my_version"
            app:layout_constraintBottom_toBottomOf="@id/tv_swubab_my_version"
            app:layout_constraintEnd_toEndOf="parent"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/swubab_gray5"
            app:layout_constraintBottom_toBottomOf="@id/tv_swubab_my_version"
            app:layout_constraintStart_toStartOf="@id/tv_swubab_my_version"/>


        <TextView
            android:id="@+id/tv_swubab_my_terms"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:paddingStart="24dp"
            android:text="@string/my_swubab_terms"
            android:textAppearance="@style/TextAppearance.Swubab.Regular"
            android:textSize="16sp"
            android:textColor="@color/swubab_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_swubab_my_version" />


        <ImageView
            android:id="@+id/iv_swubab_my_terms_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_my_next"
            app:layout_constraintTop_toTopOf="@id/tv_swubab_my_terms"
            app:layout_constraintBottom_toBottomOf="@id/tv_swubab_my_terms"
            app:layout_constraintEnd_toEndOf="parent"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/swubab_gray5"
            app:layout_constraintBottom_toBottomOf="@id/tv_swubab_my_terms"
            app:layout_constraintStart_toStartOf="@id/tv_swubab_my_terms"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>